# github-auth-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINUX_SETUP.md  Makefile  QUICKSTART.md  README.md  WINDOWS_SETUP.md  auth_cli.py  auth_daemon.py  auth_services.py  config.example.json  examples.py  github-auto-login.md  install.sh  pyproject.toml  setup.py  tests.py
assets/GitHubAuthAgent.app/Contents/: Info.plist
assets/GitHubAuthAgent.app/Contents/MacOS/: GitHubAuthAgent  terminal-notifier
assets/GitHubAuthAgent.app/Contents/Resources/: GitHubAuthAgent.icns
assets/GitHubAuthAgent.app/Contents/_CodeSignature/: CodeDirectory  CodeResources
scripts/: install.sh
src/: auth_cli.py  auth_daemon.py
